# mof-generation-at-scale

./: .gitignore  1_fragmentation.py  2_generate_frag_sdf.py  3_difflinker.py  3_difflinker_sample.py  3_difflinker_train.py  LICENSE  MANIFEST.in  README.md  __init__.py  cif2system.py  config.yaml  develop.md  dump.rdb  example-paralle-run-thinker.sh  example-parallel-run-server.sh  example-parallel-run.sh  example-parallel-run_MES.sh  example-run.sh  example-scoring-parallel-run.sh  pymatgen_cif2system.py  pyproject.toml  run-aurora-prod.sh  run-aurora-test.sh  run-polaris-test.sh  run-sunspot-test.sh  run_parallel_scoring_workflow.py  run_parallel_workflow.py  run_parallel_workflow_MES.py  run_serial_workflow.py  small_molecule_constants.py  small_molecule_construction.py  superimposition.py  test_run.py  write_molecule_files.py  zeoliteFFs_construction.py
.DiffLinker/: __init__.py  difflinker_sample_and_analyze.py  difflinker_train_difflinker.py
.DiffLinker/geom/: generate_geom_multifrag.py
.DiffLinker/src/: const.py  difflinker_datasets.py  difflinker_edm.py  difflinker_lightning.py  difflinker_molecule_builder.py  e3_diffusion_sampler.py  noise.py
.github/workflows/: deploy-docs.yml  python-package-conda.yml
DiffLinker/geom/: generate_geom_conformers.py  prepare_geom_dataset.py
DiffLinker/src/: difflinker_egnn.py
component-tests/: README.md
component-tests/cp2k/: README.md  run_test.py
component-tests/generation/: README.md  evaluate-runtime-performance.ipynb  run_queue_test.py  run_test.py
component-tests/graspa/: README.md  run_test.py
component-tests/lammps-md/: README.md  evaluate-runtime-performance-and-accuracy.ipynb  example-mofs.json  run_test.py
component-tests/mace-md/: README.md  run_test.py
component-tests/pwdft/: README.md  run_test.py
component-tests/training/: README.md  run_test.py
configs/: README.md
configs/aurora/: aurora-pwdft.py
configs/polaris/: polaris-graspa.py  polaris-raspa.py
docs/: conf.py  index.rst
docs/source/: assembly.rst  data.rst  index.rst  simulation.rst
docs/user-guide/: index.rst  lifecycle.rst  running.rst  simulation.rst
envs/: README.md  build-aurora.sh  env_ml.sh  environment-aurora.yml  environment-cpu.yml  environment-cuda.yml  environment-cuda11.yml  environment-cuda117.yml  environment-polaris.yml  ml_environment.yaml  polaris.md
envs/aurora/: Makefile.macesunspotkokkos  README.md  build-aurora.sh  environment.yml  lammps-build.sh  parallel.sh
envs/frontier/: cp2k.slurm
high-capacity-mofs/: mof-020d767a.vasp  mof-12e30d56.vasp  mof-18064ae6.vasp  mof-1c011ef6.vasp  mof-2ce48676.vasp  mof-86da4aaf.vasp  mof-a59fd046.vasp  mof-a6adffec.vasp  mof-c48033e3.vasp  mof-cdd31768.vasp  mof-e18c891e.vasp  mof_adsorption.csv
input-files/: README.md  xgb_stationary_model.json
input-files/mace/: README.md  get-macemp-0a.sh
input-files/zn-paddle-pillar/: 0_assemble-inputs.ipynb  assemble_inputs.py  hMOF_frag_frag.sdf  node.json  template_COO.yml  template_COO_size=4.yml  template_carboxyl_benzene_prompt.yml  template_cyano.yml  template_cyano_size=4.yml  template_pyridine_pyridine_prompt.yml
lightning_logs/version_0/: events.out.tfevents.1693708096.algiers.ks.uiuc.edu  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1693709480.algiers.ks.uiuc.edu  hparams.yaml
lightning_logs/version_10/: events.out.tfevents.1696343164.nereid.ks.uiuc.edu  hparams.yaml
lightning_logs/version_11/: events.out.tfevents.1696344328.nereid.ks.uiuc.edu  hparams.yaml
lightning_logs/version_12/: events.out.tfevents.1696353836.nereid.ks.uiuc.edu  hparams.yaml
lightning_logs/version_2/: events.out.tfevents.1693709763.algiers.ks.uiuc.edu  hparams.yaml
lightning_logs/version_3/: events.out.tfevents.1693710004.titan.ks.uiuc.edu  hparams.yaml
lightning_logs/version_4/: hparams.yaml
lightning_logs/version_5/: hparams.yaml  (+1 more)
models/: README.md
mofa/: OChemDB_bond_threshold.csv  __init__.py  assemble.py  confluent_test.py  db.py  difflinker_fragmentation.py  difflinker_process_fragmentation.py  difflinker_sample.py  difflinker_train.py  feedback.py  fragment.py  fragmentation.py  generator.py  model.py  octopus.py  preprocess_linkers.py  proxyqueue.py  proxystream.py  steering.py  version.py
scripts/: README.md
tests/: conftest.py  test_assemble.py  test_colmena.py  test_db.py  test_feedback.py  test_finetune.py  test_fragment.py  test_generator.py  test_generator_with_ckpt.py  test_hyun.py  test_model.py  test_select.py  test_steering.py  test_validate.py  test_xyz.py
utils/: __init__.py  difflinker_sample_and_analyze.py  filter_and_merge.py  frag_utils.py  prepare_data_from_sdf.py  prepare_dataset.py  sascorer.py
(+5983 files in other folders)
