[project]
name = "mofa"
version = "0.0.1"
authors = [
    { name = "Hyun Park", email = "hyunp2@illinois.edu" },
    { name = "Xiaoli Yan", email = "xyan11@uic.edu" },
    { name = "Eliu Huerta", email = "huerta@anl.gov" },
    { name = "Logan Ward", email = "lward@anl.gov" },
]
description = 'Generating useful MOFs on HPC'
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["HPC", "AI", "Workflows", "Quantum Chemistry", "Chemical Engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
]
dependencies = [
    # General workflow
    "colmena==0.7.*",
    "more-itertools",
    "parsl>=2023.04",
    "tqdm",

    # Chemistry related stuff
    "ase>3.22",
    "rdkit>2024",
    "openbabel-wheel",
    "pymatgen",

    # ML-related dependencies
    "wandb",
    "imageio",
    "scikit-learn",
    "mace-torch",
    "torch-dftd",

    # Performance tracking
    "gpustat",

    # Data management
    "pymongo>=4",
    "pandas"
]

[tool.setuptools.packages.find]
include = ['mofa*']

[project.urls]
repository = "https://github.com/globus-labs/mof-generation-at-scale"

[project.optional-dependencies]
test = [
    'flake8',
    'pytest',
    'pytest-skip-slow',
    'pytest-timeout',
    'pytest-cov',
    'mongomock'
]

[project.scripts]
monitor_utilization = "mofa.hpc.utilization:utilization_cli"
